--- a/index.html
+++ b/index.html
@@ -3,29 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="estilo.css">
-    <title>cajas</title>
+    <link rel="stylesheet" href="estilos.css">
+    <title>Document</title>
 </head>
 <body>
-    <h1>EJEMPLO GRID</h1>
+    <h1>BRITNEY XIMENA MAMANI SALAS</h1>
     <div class="padre">
-        <div class="hijo1">hijo1</div>
-        <div class="hijo2">hijo2</div>
-        <div class="hijo3">hijo3</div>
-        <div class="hijo4">hijo4</div>
-        <div class="hijo">hijo5</div>
-        <div class="hijo">hijo6</div>
-        <div class="hijo">hijo7</div>
-        <div class="hijo">hijo8</div>
-        <div class="hijo">hijo9</div>
-        <div class="hijo">hijo10</div>
-        <div class="hijo">hijo11</div>
-        <div class="hijo">hijo12</div>
+        <div class="hijo1">1</div>
+        <div class="hijo2">2</div>
+        <div class="hijo3">3</div>
+        <div class="hijo4">4</div>
+        <div class="hijo5">5</div>
+        <div class="hijo6">6</div>
+        <div class="hijo7">7</div>
+        <div class="hijo8">8</div>
+        <div class="hijo9">9</div>
     </div>
-    <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg" aria-label=".form-control-lg example">
-    <input class="form-control" type="text" placeholder="Default input" aria-label="default input example">
-    <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
+    <div class="padre2">
+        <div class="hijito1">hijito1</div>
+        <div class="hijito2">
+            <div class="cuadro1">cuadro1</div>
+            <div class="cuadro2">cuadro2</div>
+            <div class="cuadro3">cuadro3</div>
+        </div>
+        <div class="hijito3">hijito3</div>
+    </div>
+    <div class="padre3">
+        <form class="row g-3">
+            <div class="col-md-6">
+              <label for="inputEmail4" class="form-label">CORREO</label>
+              <input type="email" class="form-control" id="inputEmail4">
+            </div>
+            <div class="col-md-6">
+              <label for="inputPassword4" class="form-label">EDAD</label>
+              <input type="password" class="form-control" id="inputPassword4">
+            </div>
+            <div class="col-12">
+              <label for="inputAddress" class="form-label">NOMBRE</label>
+              <input type="text" class="form-control" id="inputAddress" placeholder="DIGITE SU NOMBRE">
+            </div>
+            <div class="col-12">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="gridCheck">
+                  <label class="form-check-label" for="gridCheck">
+                    Check me out
+                  </label>
+                </div>
+              </div>
+              <div class="col-12">
+                <button type="submit" class="btn btn-primary">Sign in</button>
+              </div>
+          </form>
+    </div>
 </body>
 </html>
